# lazy-splitter

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  INSTALL.md  Makefile  QUICKSTART.md  README.md  inspect_bookmarks.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_dev.py
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  USAGE.md
examples/: How Not to Die_ Discover the Foods Scientifically Proven to Prevent and Reverse Disease by Gene Stone.epub  README.md  usage_example.py
src/epub_splitter/: __init__.py  cli.py  detector.py  models.py  splitter.py
src/pdf_splitter/: __init__.py  __main__.py  cli.py  detector.py  models.py  splitter.py
tests/: conftest.py  test_detector.py
